--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0, user-scalable=no"
-    />
     <title>Interactive rating component</title>
     <link rel="stylesheet" href="../css/public.css" />
     <link rel="stylesheet" href="../css/index.css" />
@@ -47,5 +43,6 @@
       </div>
     </div>
     <script src="../index.js"></script>
+    <!-- <script src="flexible.js"></script> -->
   </body>
 </html>
