--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,10 @@
     <title>Interactive rating component</title>
     <link rel="stylesheet" href="../css/public.css" />
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/thankyou.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container rating-board">
       <div class="inner">
         <div class="star">
             <img src="../images/icon-star.svg" alt="">
@@ -42,6 +43,21 @@
         </div>
       </div>
     </div>
+    <div class="container thankyou-board">
+      <div class="inner">
+           <div>
+               <img src="../images/illustration-thank-you.svg" alt="">
+           </div>
+           <div class="result">You selected ${4} out of 5</div>
+           <div>
+               <h2>Thank you!</h2>
+               <p>
+                   We appreciate you taking the time to give a rating.If you ever need more support, 
+                   don’t hesitate to get in touch!
+               </p>
+           </div>
+      </div>
+   </div>
     <script src="../index.js"></script>
     <!-- <script src="flexible.js"></script> -->
   </body>
