--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Interactive rating component</title>
-    <link rel="stylesheet" href="../css/public.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/thankyou.css" />
+    <link rel="stylesheet" href="../index.css" />
   </head>
   <body>
     <div class="container rating-board">
       <div class="inner">
-        <div class="star">
+        <div class="star star0">
             <img src="../images/icon-star.svg" alt="">
         </div>
         <div>
@@ -43,12 +41,12 @@
         </div>
       </div>
     </div>
-    <div class="container thankyou-board">
+    <div class="container thankyou-board switch-off">
       <div class="inner">
            <div>
                <img src="../images/illustration-thank-you.svg" alt="">
            </div>
-           <div class="result">You selected ${4} out of 5</div>
+           <div class="result"></div>
            <div>
                <h2>Thank you!</h2>
                <p>
@@ -59,6 +57,5 @@
       </div>
    </div>
     <script src="../index.js"></script>
-    <!-- <script src="flexible.js"></script> -->
   </body>
 </html>
